# hatch-pypackage-cookiecutter

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.dist_name}}/: README.md  pyproject.toml
{{cookiecutter.dist_name}}/.github/workflows/: documentation.yml
{{cookiecutter.dist_name}}/cluster/: Makefile  README.md  launcher.py
{{cookiecutter.dist_name}}/tests/: test_main.py
{{cookiecutter.dist_name}}/{{cookiecutter.package_name}}/: main.py
{{cookiecutter.dist_name}}/{{cookiecutter.package_name}}/config/: default.py
