# Setup project
[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.dist_name }}"
authors = [
  { name = "{{ cookiecutter.dist_name }}", email = "{{ cookiecutter.email }}" }
]
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = [
]

[project.urls]
Documentation = "{{ cookiecutter.docs_url }}"
Source = "{{ cookiecutter.repository_url }}"

# Setup hatch
[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "{{ cookiecutter.package_name }}/__init__.py"

[tool.hatch.envs.default]
python = "{{ cookiecutter.python_version }}"
dependencies = [
    "black",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    {% if cookiecutter.asyncio == "Y" -%}
    "pytest-asyncio",
    {%- endif %}
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "black .",
  "ruff --fix .",
  "mypy {{ cookiecutter.package_name }}/",
]
lint-check = [
  "black --check .",
  "ruff .",
  "mypy {{ cookiecutter.package_name }}/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

# Configure tool options
[tool.black]
line-length = 88
target-version = "py{{ cookiecutter.python_version | replace(".", "") }}"
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | docs
  | .github
  | third_party
  | _vendor
  | scratch
)/
'''

[tool.ruff]
line-length = 88
target-version = "py{{ cookiecutter.python_version | replace(".", "") }}"
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "I",
]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["{{ cookiecutter.package_name }}"]
force-single-line = true
single-line-exclusions = ["typing"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pytest.ini_options]
addopts = "--cov={{ cookiecutter.package_name }}/ --cov-report=term-missing"
{% if cookiecutter.asyncio == "Y" -%}
asyncio_mode = "strict"
{%- endif %}